--- a/src/css/forms/form--find-program.css
+++ b/src/css/forms/form--find-program.css
@@ -1,6 +1,6 @@
 .section--find-program {
 
-    background: url("../assets/images/study-smile-duotone.jpg") no-repeat;
+    /* background: url("../assets/images/study-smile-duotone.jpg") no-repeat; */
     background-size: cover;
     background-position: 60% 0;
     color: #fff !important;
