--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -46,6 +46,20 @@ pageTitle: Test title
                             </div>
                         </div>
 
+                        <div class="quote  mv2">
+                            <div class="quote__avatar">
+                                <img  class="lazyload" data-src="https://cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_shared-content/images/gls/carrie-rasmussen.jpg" title="">
+                            </div>
+
+                            <div class="quote__text">
+                                <p>"Bethel invites leaders to come together to gain understanding and put into practice what Jesus taught us: love one another. I have a true appreciation for Bethel's desire to come alongside the church."</p>
+                                <cite class="quote__source"><b>Carrie Rasmussen</b><br>
+                                    Campus Executive Pastor<br>
+                                    Eagle Brook Church
+                                </cite>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
