--- a/src/templates/partials/section--contact-visit.hbs
+++ b/src/templates/partials/section--contact-visit.hbs
@@ -4,15 +4,15 @@
 		<div class="inner">
 			<div class="grid  grid--center">
 				<div class="grid-cell u-medium-2-3">
-					<div class="small-grid-pad-2x  medium-grid-pad-2x">
+					<div class="medium-grid-pad-2x">
 						<h2 class="beta  mb1  center  fw300">See yourself here.</h2>
-						<p class="h3  mb2  mb4--medium  fw400">With over 100 majors and programs of study, dozens of student-led clubs, extracirricular activities and intramural sports, there is something at Bethel for you. Our community is informed by our academics and our faith and we think its our best feature. We hope you think so too.</p>
+						<p class="h3  mb2  fw400">With over 100 majors and programs of study, dozens of student-led clubs, extracirricular activities and intramural sports, there is something at Bethel for you. Our community is informed by our academics and our faith and we think its our best feature. We hope you think so too.</p>
 					</div>
 				</div>
 			</div>
 
 			<div class="grid  grid--wrap">
-				<div class="grid-cell u-medium-1-2  pa2  ph5@medium  js-animateSlideRight">
+				<div class="grid-cell u-medium-1-2  pa2--medium  mb2  js-animateSlideRight">
 					<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
 						<g data-iconmelon="Simple Line Icons:fb184cb4fb59727d7839f79c7a826661" id="bubble-speach">
 							<g>
@@ -53,7 +53,7 @@
 					<p class="h4"><a href="mailto:contact@bethel.edu">admissions@bethel.edu</a></p>
 				</div>
 
-				<div class="grid-cell u-medium-1-2  pa2  ph5@medium  js-animateSlideLeft">
+				<div class="grid-cell u-medium-1-2  pa2--medium  js-animateSlideLeft">
 					<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
 						<g data-iconmelon="Streamline Icon Set:f2ad77ff5aac84e660d36d2b8a91449e" id="map-pin">
 							<g id="Expanded">
