--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -18,10 +18,18 @@
 					</div>
 
 					<form class="form--find-program">
-						<div class="search--program">
-							<input type="search" placeholder="Search for your program">
-							<button class="btn">Find programs</button>
-						</div>
+		                <div class="search--program">
+		                    <input type="search" placeholder="Find your program" id="search-text" onkeyup="delayProgramSearch(this.value);" />
+		                    <button class="btn">
+		                    	<span class="mr1--medium">
+		                    	<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
+		                    		<title>Search</title>
+		                    		<desc>Search icon</desc>
+		                    	<path d="M31.008 27.231l-7.58-6.447c-0.784-0.705-1.622-1.029-2.299-0.998 1.789-2.096 2.87-4.815 2.87-7.787 0-6.627-5.373-12-12-12s-12 5.373-12 12c0 6.627 5.373 12 12 12 2.972 0 5.691-1.081 7.787-2.87-0.031 0.677 0.293 1.515 0.998 2.299l6.447 7.58c1.104 1.226 2.907 1.33 4.007 0.23s0.997-2.903-0.23-4.007zM12 20c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z" fill="#000000"></path>
+		                    	</svg>
+		                    	</span>
+		                    	<span class="hide--small">Find programs</span></button>
+		                </div>
 						<div class="grid">
 {{!-- 							<div class="grid-cell  bkg--white  ma1">
 								<div class="grid-pad-1x">
