--- a/src/css/base/utils.css
+++ b/src/css/base/utils.css
@@ -45,7 +45,9 @@ $bkg--gradient-blue-yellow: linear-gradient(-150deg, $bethel--blue, 70%, $bethel
 	background: linear-gradient(-150deg, $bethel--navy, $bethel--blue);
 }
 
-
+.vh100 {
+	height:  100vh;
+}
 
 .vh110 {
 	height: 110vh;
