--- a/src/css/post.css
+++ b/src/css/post.css
@@ -53,6 +53,7 @@
 @import "enhance/animation.css";
 @import "enhance/big-steps.css";
 @import "enhance/buttons.css";
+@import "enhance/checkmark.css";
 @import "enhance/parallax.css";
 @import "enhance/proof-points.css";
 @import "enhance/search.css";
