--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -10,7 +10,8 @@ pageTitle: Test title
 
 
     {{> section--find-program }}
-    {{> section--contact-visit }}
+    {{> section--home }}
+    {{> section--visit }}
     {{> section--request-info }}
 
     <section class="grid-section  pv6  ma0  bkg--white">
