--- a/src/templates/partials/section--contact-visit.hbs
+++ b/src/templates/partials/section--contact-visit.hbs
@@ -11,7 +11,7 @@
 				</div>
 			</div>
 
-			<div class="grid  grid--wrap">
+			<div class="grid">
 				<div class="grid-cell u-medium-1-2  pa2--medium  mb2  js-animateSlideRight">
 					<svg xmlns="http://www.w3.org/2000/svg" height="33" version="1.1" viewBox="0 0 32 33" width="32">
 						<g data-iconmelon="Simple Line Icons:fb184cb4fb59727d7839f79c7a826661" id="bubble-speach">
