--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -12,11 +12,12 @@
 						</fieldset>
 						<fieldset>
 							I'd like to learn more about Bethel's
+							<span style="white-space:nowrap">
 							<select class="form--request-info__select">
 								<option id="bachelors" value="Bachelors">bachelor's degrees</option>
 								<option value="Bachelors">master's degrees</option>
 								<option value="Bachelors">doctoral programs</option>
-							</select> .
+							</select>.</span>
 						</fieldset>
 					</blockquote>
 					<button class="btn  btn-yellow  center  mt3" jtype="submit">Get info</button>
