--- a/src/css/enhance/proof-points.css
+++ b/src/css/enhance/proof-points.css
@@ -1,10 +1,11 @@
 .proof-points {
     /* color: #fff; */
     font-family: $gotham;
+    align-items: baseline;
 
     .grid-cell {
         /* background-color: #fff; */
-        padding: 3em 1em;
+        padding: 1em 1em;
         border-radius: .5em;
         margin: 1em 0;
         /* border: 1px solid #ddd; */
@@ -43,7 +44,11 @@
     align-items: center;
 
     @mixin respond-min $medium {
-    	font-size: 7rem;
+        font-size: 5rem;
+    }
+
+    @mixin respond-min $large {
+    	font-size: 6rem;
     }
 }
 
