--- a/src/css/forms/form--find-program.css
+++ b/src/css/forms/form--find-program.css
@@ -111,7 +111,7 @@
 
     @mixin respond-min $medium {
         margin-right: 1em;
-        font-size: 1.25rem;
+        /* font-size: 1.25rem; */
         padding: .5em;
         /* flex: 1 0 0; */
         margin-bottom: 0;
@@ -131,5 +131,7 @@
 
 .form--find-program .search--program svg {
     fill: #fff;
-    margin: 0;
+    margin: 0 .5em 0 0;
+    transform:  translateY(25%);
+    position: relative;
 }
