--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -17,11 +17,11 @@
 						</div>
 					</div>
 
-					<form id="find-program-form" class="form--find-program" action="https://www.bethel.edu/academics/program-search" method="GET">
+					<form id="find-program-form" class="form--find-program  js-animateRevealUp" action="https://www.bethel.edu/academics/program-search" method="GET">
 						<div class="search--program">
 							<input required name="search" id="find-program-txt" type="search" placeholder="Search for your program">
 							<button id="find-program-btn" class="btn" type="submit">
-								<svg style="padding-top:1em" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="20" viewBox="0 0 32 32">
 									<title>Search</title>
 									<desc>Search icon</desc>
 									<path d="M31.008 27.231l-7.58-6.447c-0.784-0.705-1.622-1.029-2.299-0.998 1.789-2.096 2.87-4.815 2.87-7.787 0-6.627-5.373-12-12-12s-12 5.373-12 12c0 6.627 5.373 12 12 12 2.972 0 5.691-1.081 7.787-2.87-0.031 0.677 0.293 1.515 0.998 2.299l6.447 7.58c1.104 1.226 2.907 1.33 4.007 0.23s0.997-2.903-0.23-4.007zM12 20c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"></path>
@@ -31,77 +31,6 @@
 						</div>						
 					</form>
 
-					<form class="form--find-program">
-		                <div class="search--program">
-		                    <input type="search" placeholder="Find your program" id="search-text" onkeyup="delayProgramSearch(this.value);" />
-		                    <button class="btn">
-		                    	
-		                    	<svg style="padding-top:1em" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
-		                    		<title>Search</title>
-		                    		<desc>Search icon</desc>
-		                    	<path d="M31.008 27.231l-7.58-6.447c-0.784-0.705-1.622-1.029-2.299-0.998 1.789-2.096 2.87-4.815 2.87-7.787 0-6.627-5.373-12-12-12s-12 5.373-12 12c0 6.627 5.373 12 12 12 2.972 0 5.691-1.081 7.787-2.87-0.031 0.677 0.293 1.515 0.998 2.299l6.447 7.58c1.104 1.226 2.907 1.33 4.007 0.23s0.997-2.903-0.23-4.007zM12 20c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8z"></path>
-		                    	</svg>
-
-		                    	<span class="hide--small">Find programs</span></button>
-		                </div>
-						<div class="grid">
-{{!-- 							<div class="grid-cell  bkg--white  ma1">
-								<div class="grid-pad-1x">
-									<h4 class="mb1">Degree Type</h4>
-									<label><input type="radio" value="" checked="true"> All</label>
-									<label><input type="radio" value=""> Associate's</label>
-									<label><input type="radio" value=""> Bachelor's</label>
-									<label><input type="radio" value=""> Master's</label>
-									<label><input type="radio" value=""> Doctorate</label>
-									<label><input type="radio" value=""> Certificate</label>
-									<label><input type="radio" value=""> License</label>
-								</div>
-							</div> --}}
-{{!-- 							<div class="grid-cell bkg--white  ma1">
-								<div class="grid-pad-1x">
-									<h4 class="mb1">Delivery Type</h4>
-									<div class="form--filter-option">
-										<input class="mr1" type="checkbox" checked="true" id="facetoface">
-										<label for="facetoface">Face to Face</label>
-									</div>
-									<div class="form--filter-option">
-										<input class="mr1" type="checkbox" checked="true" id="blended">
-										<label for="blended">Blended</label>
-									</div>
-									<div class="form--filter-option">
-										<input class="mr1" type="checkbox" checked="true" id="online">
-										<label for="online">Online</label>
-									</div>
-								</div>
-							</div> --}}
-{{!-- 							<div class="grid-cell  bkg--white  ma1">
-								<div class="grid-pad-1x">
-									<h4 class="mb1">School</h4>
-									<div class="form--filter-option">
-										<input class="mr1" type="checkbox" checked="true" id="facetoface">
-										<label for="facetoface">All</label>
-									</div>
-									<div class="form--filter-option">
-										<input class="mr1" type="checkbox" checked="true" id="blended">
-										<label for="blended">College of Arts &amp; Sciences</label>
-									</div>
-									<div class="form--filter-option">
-										<input class="mr1" type="checkbox" checked="true" id="online">
-										<label for="online">College of Adult &amp; Sciences</label>
-									</div>
-									<div class="form--filter-option">
-										<input class="mr1" type="checkbox" checked="true" id="facetoface">
-										<label for="facetoface">Graduate School</label>
-									</div>
-									<div class="form--filter-option">
-										<input class="mr1" type="checkbox" checked="true" id="blended">
-										<label for="blended">Bethel Seminary</label>
-									</div>
-								</div>
-							</div> --}}
-						</div>
-						
-					</form>
 				</div>
 			</div>
 		</div>
