--- a/src/css/post.css
+++ b/src/css/post.css
@@ -10,6 +10,7 @@
 @import "forms/forms.css";
 @import "forms/form--request-info.css";
 @import "forms/form--find-program.css";
+@import "forms/form-validation.css";
 
 @import "typography/typography.css";
 @import "typography/dl.css";
