moving to web pack.config.js

--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -13,6 +13,7 @@ pageTitle: Test title
 
     {{> image-bank }}
 
+    {{> table }}
 
     <section class="grid-section">
     <div class="grid">
@@ -65,70 +66,8 @@ pageTitle: Test title
     <h2>Athletics</h2>
     <p>The <a href="http://athletics.bethel.edu">Bethel Royals</a> field 18 NCAA Division III varsity sports in the <a href="http://www.miac-online.org/">Minnesota Intercollegiate Athletic Conference (MIAC)</a>
     </p>
-    <table border="0">
-        <tbody>
-            <tr>
-                <td><strong>Men's Teams</strong>
-                </td>
-                <td><strong>Women's Teams</strong>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=baseball&amp;path=baseball">Baseball</a>
-                </td>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=basketball2&amp;path=wbball">Basketball</a>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=basketball&amp;path=mbball">Basketball</a>
-                </td>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=crosscountry2&amp;path=wcross">Cross Country</a>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=crosscountry&amp;path=mcross">Cross Country</a>
-                </td>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=golf2&amp;path=wgolf">Golf</a>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=football&amp;path=football">Football</a>
-                </td>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=hockey2&amp;path=whockey">Hockey</a>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=golf&amp;path=mgolf">Golf</a>
-                </td>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=soccer2&amp;path=wsoc">Soccer</a>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=hockey&amp;path=mhockey">Hockey</a>
-                </td>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=softball&amp;path=softball">Softball</a>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=soccer&amp;path=msoc">Soccer</a>
-                </td>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=tennis2&amp;path=wten">Tennis</a>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=tennis&amp;path=mten">Tennis</a>
-                </td>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=track2&amp;path=wtrack">Track and Field</a>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=track&amp;path=mtrack">Track and Field</a>
-                </td>
-                <td><a href="http://athletics.bethel.edu/index.aspx?tab=volleyball&amp;path=wvball">Volleyball</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+
+
     <h2>The Arts</h2>
     <p>Bethel's musical, theatre, and visual arts are highly respected among Christian colleges. Our <a href="http://cas.bethel.edu/academics/departments/music/">music department</a> fields 11 vocal and instrumental performance groups - jazz, choir, symphony orchestra, even handbells-in the expansive <a href="http://www.bethel.edu/events/arts/venues/benson/index">Benson Great Hall</a>. Plus, our theatre students stage 4 plays annually in the hall or in the intimate Black Box Theatre.</p>
     <p>We have two art galleries on campus which host exhibitions showcasing the work of nationally and internationally established artists as well as artists in our local communities.</p>
