--- a/src/templates/partials/table.hbs
+++ b/src/templates/partials/table.hbs
@@ -1,4 +1,4 @@
-<table class="responsive">
+<table class="xresponsive">
 	<thead>
 		<tr>
 			<th>New Staff Training Courses</th>
@@ -60,7 +60,7 @@
 	</tbody>
 </table>
 
-<table class="responsive">
+<table class="xresponsive">
 	<thead>
 		<tr>
 			<th>Meal type</th>
@@ -103,7 +103,7 @@
 	</tbody>
 </table>
 
-<table class="responsive">
+<table class="xresponsive">
 	<thead>
 		<tr>
 			<th>Course Title</th>
@@ -201,16 +201,17 @@
 	</tbody>
 </table>
 
-<table border="0" class="responsive">
-	<tbody>
+<table class="xresponsive">
+	<thead>
 		<tr>
-			<th scope="col" data-th="">
-			</th><th scope="col" data-th="Perkins Loans">Perkins Loans</th>
+			<th scope="col" data-th="Perkins Loans">Perkins Loans</th>
 			<th scope="col" data-th="Direct Subsidized Loans">Direct Subsidized Loans</th>
 			<th scope="col" data-th="Direct Unsubsidized Loans">Direct Unsubsidized Loans</th>
 			<th scope="col" data-th="Direct PLUS Loans">Direct PLUS Loans</th>
 			<th scope="col" data-th="Private Loans">Private Loans</th>
 		</tr>
+	</thead>
+	<tbody>
 		<tr>
 			<th scope="rowgroup" data-th="">Borrower</th>
 			<td data-th="Perkins Loans">Student</td>
@@ -325,7 +326,7 @@
 	</tbody>
 </table>
 
-<table border="0" class="responsive mb2">
+<table border="0" class="xresponsive mb2">
 	<caption>Loan Information</caption>
 	<thead>
 		<tr>
@@ -367,7 +368,6 @@
 		</tr>
 	</tbody>
 </table>
-
 
 
 <table border="0" class="responsive mb2">
@@ -426,7 +426,7 @@
   </tbody>
 </table>
 
-<table border="0" class="responsive">
+<table border="0" class="xresponsive">
 <caption>Cost/Semester</caption>
 <thead>
    <tr>
@@ -480,5 +480,84 @@
       <td>$1,215</td>
     </tr>
 
+  </tbody>
+</table>
+
+<table>
+  <thead>
+  <tr>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Job Title</th>
+    <th>Favorite Color</th>
+    <th>Wars or Trek?</th>
+    <th>Name</th>
+    <th>Date of Birth</th>
+    <th>Dream Vacation City</th>
+    <th>GPA</th>
+    <th>Arbitrary Data</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>James</td>
+    <td>Matman</td>
+    <td>Chief Sandwich Eater</td>
+    <td>Lettuce Green</td>
+    <td>Trek</td>
+    <td>Digby Green</td>
+    <td>January 13, 1979</td>
+    <td>Gotham City</td>
+    <td>3.1</td>
+    <td>RBX-12</td>
+  </tr>
+  <tr>
+    <td>The</td>
+    <td>Tick</td>
+    <td>Crimefighter Sorta</td>
+    <td>Blue</td>
+    <td>Wars</td>
+    <td>John Smith</td>
+    <td>July 19, 1968</td>
+    <td>Athens</td>
+    <td>N/A</td>
+    <td>Edlund, Ben (July 1996).</td>
+  </tr>
+  <tr>
+    <td>Jokey</td>
+    <td>Smurf</td>
+    <td>Giving Exploding Presents</td>
+    <td>Smurflow</td>
+    <td>Smurf</td>
+    <td>Smurflane Smurfmutt</td>
+    <td>Smurfuary Smurfteenth, 1945</td>
+    <td>New Smurf City</td>
+    <td>4.Smurf</td>
+    <td>One</td>
+  </tr>
+  <tr>
+    <td>Cindy</td>
+    <td>Beyler</td>
+    <td>Sales Representative</td>
+    <td>Red</td>
+    <td>Wars</td>
+    <td>Lori Quivey</td>
+    <td>July 5, 1956</td>
+    <td>Paris</td>
+    <td>3.4</td>
+    <td>3451</td>
+  </tr>
+  <tr>
+    <td>Captain</td>
+    <td>Cool</td>
+    <td>Tree Crusher</td>
+    <td>Blue</td>
+    <td>Wars</td>
+    <td>Steve 42nd</td>
+    <td>December 13, 1982</td>
+    <td>Las Vegas</td>
+    <td>1.9</td>
+    <td>Under the couch</td>
+  </tr>
   </tbody>
 </table>
