--- a/src/css/global/off-canvas--global.css
+++ b/src/css/global/off-canvas--global.css
@@ -10,6 +10,7 @@
   font-family: $gotham;
   top: 0;
   overflow-y: auto;
+  contain: paint;
 
   @mixin respond-min $large {
     position: relative;
