--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -14,12 +14,11 @@
 
 		{{!-- {{> school__navigation }} --}}
 
-
-		<div class="grid-section mt0" >
+{{!-- 		<div class="grid-section mt0" >
 		{{> moving-picture }}
-		</div>
+		</div> --}}
 
-		{{> section--apply }}
+		{{!-- {{> section--apply }} --}}
 
 
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
