trying to make odometer work w/ scroll reveal

--- a/src/templates/partials/proof-points.hbs
+++ b/src/templates/partials/proof-points.hbs
@@ -1,31 +1,29 @@
 {{!-- <h2 class="uppercase-underlined">Highlights</h2> --}}
 <div class="proof-point-collection">
-<div class="grid proof-points">
-    <div class="grid-cell animate animate--fadeIn">
-        <div class="medium-grid-pad-1x">
-            <div class="proof-point">
-                <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="94">00</span>%</span>
-                    <span class="proof-point__text_below">seniors who rank their Bethel education good or excellent</span>
-                </p>
+    <div class="grid proof-points">
+        <div class="grid-cell">
+            <div class="medium-grid-pad-1x">
+                <div class="proof-point">
+                    <p class="proof-point__text">
+                    <span class="proof-point__number">
+                        <span class="odometer" data-final-number="94">
+                        00
+                        </span>
+                        %
+                    </span>
+                        <span class="proof-point__text_below">seniors who rank their Bethel education good or excellent</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="grid-cell">
+            <div class="medium-grid-pad-1x">
+                <div class="proof-point">
+                    <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="93">00</span>%</span>
+                        <span class="proof-point__text_below">of recent grads are either employed or in graduate school</span>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="grid-cell animate animate--fadeIn">
-        <div class="medium-grid-pad-1x">
-            <div class="proof-point">
-                <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="93">00</span>%</span>
-                    <span class="proof-point__text_below">of recent grads are either employed or in graduate school</span>
-                </p>
-            </div>
-        </div>
-    </div>
-{{!--     <div class="grid-cell animate animate--fadeIn">
-        <div class="grid-pad-1x">
-            <div class="proof-point">
-                <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="5">0</span>th</span>
-                    <br/><span class="proof-point__text_below">lowest tuition out of the 17 schools in the Minnesota Private College Council</span> </p>
-            </div>
-        </div>
-    </div> --}}
-</div>
 </div>
