--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -7,8 +7,9 @@
 					<form class="form--request-info  validate-form" action="" method="post" >
 					<blockquote class="center">
 						<fieldset>
-							Hello, my <label class="form--request-info__label" for="user_name">name</label> is <input required="" name="user[name]" id="user_name" value="" type="text" title="Name required">
-							and my <label class="form--request-info__label" for="user_email">email</label> is <input required="" name="user[email]" id="user_email" value="" type="email" title="Email required">.
+							Hello, my <label class="form--request-info__label" for="user_name">name</label> is <input required="" name="user[firstName]" placeholder="First" id="user_firstName" value="" type="text" title="First name required">
+							<input required="" name="user[lastName]" placeholder="Last" id="user_lastName" value="" type="text" title="Last name required">
+							and my <label class="form--request-info__label" for="user_email">email</label> is <input required="" name="user[email]" id="user_email" value="" placeholder="email@bethel.edu" type="email" title="Email required">.
 						</fieldset>
 						<fieldset>
 							I'd like to learn more about Bethel's
