--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -5,9 +5,20 @@
 
     <div class="moving-picture">
         <div class="moving-picture__media">
-{{!--                 <video autoplay="autoplay" style="min-width:100%">
+{{!--             <video autoplay="autoplay" loop="true" style="min-width:100%">
                 <source src="{{ this.video }}" type="video/mp4">
             </video> --}}
+            <div id="vid-wrap"></div>
+            <script type="text/javascript">
+                if (window.matchMedia("(min-width: 1100px)").matches) {
+                    var vidStr = '<video preload="auto" autoplay="autoplay" muted="true" loop="true" style="min-width: 100%" id="vid">';
+                    vidStr += '<source src="https://www.bethel.edu/_homepages/www/images/welcome-week-2016-video.mp4" type="video/mp4" />';
+                    vidStr += '<img src="https://cdn3.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/feature/welcome-week-2016-2x1.jpg" />';
+                    vidStr += '</video>';
+                    document.getElementById('vid-wrap').innerHTML = vidStr;
+                    document.getElementById('vid').play();
+                }
+            </script>
             <picture>
                 <!--[if IE 9]><video style="display: none"><![endif]-->
                 <source srcset="{{ this.bigImg }}" media="(min-width: 830px)" />
