home section tweaks

--- a/src/templates/partials/section--home.hbs
+++ b/src/templates/partials/section--home.hbs
@@ -7,20 +7,14 @@
 					<div class="medium-grid-pad-2x">
 						<h2 class="beta  mb1  center  fw300">Home away from home</h2>
 						<p class="h3  mb2  fw400">With over 100 majors and programs of study, dozens of student-led clubs, extracirricular activities and intramural sports, there is something at Bethel for you. Our community is informed by our academics and our faith and we think its our best feature. We hope you think so too.</p>
+							<ul>
+								<li><a href="https://www.bethel.edu/academics/program-search">Find your major or program</a></li>
+								<li><a href="https://www.bethel.edu/undergrad/student-life/">Student life</a></li>
+								<li><a href="https://www.bethel.edu/academics/">Academics</a></li>
+								<li><a href="https://www.bethel.edu/undergrad/campus-ministries/">Faith at Bethel</a></li>
+							</ul>
 					</div>
 				</div>
-			</div>
-
-			<div class="grid">
-				<div class="grid-cell u-medium-1-2  pa2--medium  mb2  js-animateSlideRight">
-					<img src="">
-
-				</div>
-
-				<div class="grid-cell u-medium-1-2  pa2--medium  js-animateSlideLeft">
-
-				</div>
-
 			</div>
 		</div>
 	</div>
