adding propsective section

--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -8,7 +8,7 @@ pageTitle: Test title
     {{> moving-picture }}
 </div>
 
-
+    {{> section--prospective-students }}
     {{> section--find-program }}
     {{> section--home }}
     {{> section--visit }}
