first round of changes

--- a/src/css/modules/flickity-custom.css
+++ b/src/css/modules/flickity-custom.css
@@ -160,3 +160,7 @@ Styles for the big carousel on bethel.edu
 .flickity-prev-next-button:disabled {
     display: none;
 }
+
+.flickity-page-dots {
+    left: 0;
+}
