--- a/src/css/modules/routing.css
+++ b/src/css/modules/routing.css
@@ -1,33 +1,14 @@
 .routing {
-	margin-top: 4em;
-	display: flex;
-	flex-wrap: Wrap;
-
-	@mixin respond-min $medium {
-		/* flex-direction: column; */
-	}
+	border-left: 1px solid #ccc
 }
 
 .routing__item {
 	background: #fff;
-	// margin: 1em 1em;
 	font-family: $gotham;
 	color: #777;
 	border-right:  1px solid #ccc;
 	border-bottom: 1px solid #ccc;
 	transition: all 100ms;
-
-	@mixin respond-min $medium {
-		flex-basis: 50%;
-	}
-
-	@mixin respond-min $large {
-		flex-basis: 25%;
-	}
-}
-
-.routing__item:first-child {
-	border-left: 1px solid #ccc;
 }
 
 .routing__item:hover {
