--- a/src/templates/partials/proof-points.hbs
+++ b/src/templates/partials/proof-points.hbs
@@ -25,4 +25,13 @@
             </div>
         </div>
     </div>
+    <div class="grid-cell">
+        <div class="medium-grid-pad-1x">
+            <div class="proof-point">
+                <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="93">00</span>%</span>
+                    <span class="proof-point__text_below">of recent grads are either employed or in graduate school</span>
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
