--- a/src/css/modules/section--home.css
+++ b/src/css/modules/section--home.css
@@ -3,7 +3,7 @@
 }
 
 .section--home__holder:before {
-	background-image: linear-gradient(to bottom left, transparent, #000),linear-gradient(to bottom left, transparent, #000);
+	background-image: linear-gradient(180deg, transparent 50%, #333);
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -32,7 +32,7 @@
 		position: relative;
 		z-index: 1;
 		display: table-cell;
-		vertical-align: middle;
+		vertical-align: bottom;
 	}
 
 	h2 {
