--- a/src/css/site/off-canvas--site.css
+++ b/src/css/site/off-canvas--site.css
@@ -14,6 +14,7 @@
     margin-top: 0;
     margin-bottom: 2em;
     font-family: $gotham;
+    overflow: auto;
 
     @mixin respond-min $large {
         position: relative;
