adding info tags

--- a/src/css/post.css
+++ b/src/css/post.css
@@ -43,6 +43,7 @@
 @import "modules/social-media.css";
 @import "modules/moving-picture.css";
 @import "modules/section--home.css";
+@import "modules/info-tags.css";
 
 @import "enhance/carousel.css";
 
