--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -6,6 +6,7 @@ pageTitle: Test title
 
 <div class="grid-section mt0" >
     {{> moving-picture }}
+    {{> info-tags }}
 </div>
 
     {{> section--prospective-students }}
